# docs/swagger.yaml
@@ -202,6 +202,23 @@ paths:
       summary: 登录
       tags:
       - 登录相关
+  /api/v1/refresh-token:
+    post:
+      consumes:
+      - application/json
+      description: 刷新token
+      parameters:
+      - description: 刷新Token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: 刷新token
+      tags:
+      - 登录相关
   /api/v1/user:
     get:
       description: 用户列表
